# CCode

./: .cproject  .gitignore  .project  README.md
src/: CMakeLists.txt  main.c
src/openmp/: CMakeLists.txt  omp_getEnvInfo.c  omp_mm.c  omp_orphan.c  omp_pi.c  omp_reduction.c  omp_workshare1.c  omp_workshare2.c
